unpackaged/main/default/objects/bt_stripe__Dispute__c/bt_stripe__Dispute__c.object-meta.xml
<CustomObject>
    <description>A Dispute record stores Dispute information along with the related Transaction that is being disputed. Disputes are created for Stripe Webhook Events only.</description>
    <label>Dispute</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Dispute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disputes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>