unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/bt_stripe__Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes</relationshipName>
    <type>Lookup</type>
</CustomField>