unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/bt_stripe__Dispute_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Dispute_ID__c</fullName>
    <label>Dispute ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>