unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/bt_stripe__Past_Due__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Past_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the last evidence submission was submitted past the due date. Defaults to false if no evidence submissions have occurred. If true, then delivery of the latest evidence is not guaranteed.</description>
    <inlineHelpText>Whether or not the last evidence submission was submitted past the due date. Defaults to false if no evidence submissions have occurred. If true, then delivery of the latest evidence is not guaranteed.</inlineHelpText>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>