unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/bt_stripe__Reason__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Fraudulent</fullName>
            </value>
            <value>
                <fullName>Subscription Canceled</fullName>
            </value>
            <value>
                <fullName>Product Unacceptable</fullName>
            </value>
            <value>
                <fullName>Product Not Received</fullName>
            </value>
            <value>
                <fullName>Unrecognized</fullName>
            </value>
            <value>
                <fullName>Credit Not Processed</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Incorrect Account Details</fullName>
            </value>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Bank Cannot Process</fullName>
            </value>
            <value>
                <fullName>Debit Not Authorized</fullName>
            </value>
            <value>
                <fullName>Customer Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>