unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/bt_stripe__Stripe_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Fee__c</fullName>
    <inlineHelpText>All fees collected by Stripe.</inlineHelpText>
    <label>Stripe Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>