unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/bt_stripe__Submission_Count__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Submission_Count__c</fullName>
    <description>The number of times evidence has been submitted. Typically, you may only submit evidence once.</description>
    <inlineHelpText>The number of times evidence has been submitted. Typically, you may only submit evidence once.</inlineHelpText>
    <label>Submission Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>