unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/bt_stripe__Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Total_Fee__c</fullName>
    <description>Total amount of fees collected by Stripe (Stripe fee + Dispute Fee).</description>
    <inlineHelpText>Total amount of fees collected by Stripe (Stripe fee + Dispute Fee).</inlineHelpText>
    <label>Total Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>