unpackaged/main/default/objects/bt_stripe__Dispute__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>bt_stripe__Payment_Method__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes</relationshipName>
    <type>Lookup</type>
</CustomField>