unpackaged/main/default/objects/bt_stripe__Dispute__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Status__c</columns>
    <columns>bt_stripe__Amount__c</columns>
    <columns>bt_stripe__Account__c</columns>
    <columns>bt_stripe__Contact__c</columns>
    <columns>bt_stripe__Past_Due__c</columns>
    <columns>bt_stripe__Transaction__c</columns>
    <columns>bt_stripe__Has_Evidence__c</columns>
    <columns>bt_stripe__Submission_Count__c</columns>
    <columns>bt_stripe__Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>