unpackaged/main/default/objects/bt_stripe__Dispute__c/listViews/bt_stripe__All1.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>